@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.015
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "DBI::Profile" => "0";
 requires "Test2::API" => "1.302165";
 requires "Test2::Event::V2" => "1.302165";
