@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add fallback in case of forking
+
 0.002003  2019-08-29 09:26:43-07:00 America/Los_Angeles
 
     - Remove unnecessary Data::Dumper require
